Update: Replaced SimpleService(String,Identifier,URL,String) with SimpleService(String,Identifier,URI,String)